# nixl

./: .clang-format  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS-Python.md  Cargo.toml  Dockerfile  README.md  meson.build  meson_options.txt  pyproject.toml
.ci/pipeline/: Jenkinsfile  build-matrix.yaml  proj-jjb.yaml
.github/workflows/: blossom-ci.yml  copyright-check.ps1
.gitlab/: build.sh  test_cpp.sh  test_python.sh  test_rust.sh
benchmark/nixlbench/contrib/: Dockerfile  build.sh
benchmark/nixlbench/src/: main.cpp
benchmark/nixlbench/src/runtime/: runtime.cpp  runtime.h
benchmark/nixlbench/src/runtime/etcd/: etcd_rt.cpp  etcd_rt.h
benchmark/nixlbench/src/utils/: scope_guard.h  utils.cpp  utils.h
benchmark/nixlbench/src/worker/: worker.cpp  worker.h
benchmark/nixlbench/src/worker/nixl/: nixl_worker.cpp  nixl_worker.h
benchmark/nixlbench/src/worker/nvshmem/: nvshmem_worker.cpp  nvshmem_worker.h
contrib/: Dockerfile  Dockerfile.manylinux  build-functions.sh  build.env
contrib/slurm/: jenkins-slurm-ci.groovy  slurm_test.sh
examples/cpp/: meson.build  nixl_etcd_example.cpp  nixl_example.cpp
examples/python/: blocking_send_recv_example.py  nixl_gds_example.py
include/: nixl.h
src/: nixl_agent.cpp
src/api/cpp/: nixl.h  nixl_descriptors.h  nixl_params.h  nixl_types.h  nixl_v2_1.h  nixl_v2_2.h
src/api/cpp/backend/: backend_aux.h  backend_engine.h  backend_plugin.h
src/bindings/python/: meson.build  nixl_bindings.cpp  nixl_utils.cpp
src/bindings/rust/: Cargo.toml  README.md  build.rs  meson.build  stubs.cpp  wrapper.cpp  wrapper.h
src/bindings/rust/src/: agent.rs  descriptor.rs  lib.rs  tests.rs
src/bindings/rust/tests/: tests.rs
src/core/: agent_data.h  meson.build  nixl_agent.cpp  nixl_listener.cpp  nixl_plugin_manager.cpp  plugin_manager.h  sync.h  transfer_request.h
src/infra/: mem_section.h  nixl_descriptors.cpp  nixl_memory_section.cpp
src/plugins/: meson.build
src/plugins/cuda_gds/: gds_backend.cpp  gds_backend.h  gds_io_batch.cpp  gds_io_batch.h  gds_plugin.cpp  gds_utils.cpp  gds_utils.h  meson.build
src/plugins/doca/: doca_backend.cpp  doca_backend.h  doca_plugin.cpp  kernel_read.cu  kernel_write.cu  kernels.cu  meson.build
src/plugins/doca/public/: backend_plugin_doca_common.h  backend_plugin_doca_device.cuh
src/plugins/hf3fs/: hf3fs_backend.cpp  hf3fs_backend.h  hf3fs_plugin.cpp  hf3fs_utills.h  hf3fs_utils.cpp  meson.build
src/plugins/posix/: aio_queue.cpp  aio_queue.h  async_queue.h  meson.build  posix_backend.cpp  posix_backend.h  posix_plugin.cpp  queue_factory_impl.cpp  queue_factory_impl.h  uring_queue.cpp  uring_queue.h
src/plugins/ucx/: meson.build  ucx_backend.cpp  ucx_backend.h  ucx_plugin.cpp
src/plugins/ucx_mo/: meson.build  ucx_mo_backend.cpp  ucx_mo_backend.h  ucx_mo_plugin.cpp
src/pybind/: nixl_bindings.cpp  nixl_wrapper.py
src/utils/: meson.build
src/utils/common/: list_elem.h  nixl_log.cpp  nixl_log.h  nixl_time.h  status.h  str_tools.h
src/utils/cuda/: cuda_utils.cpp  cuda_utils.h  meson.build
src/utils/file/: file_utils.cpp  file_utils.h  meson.build
src/utils/serdes/: meson.build  serdes.cpp  serdes.h
src/utils/stream/: meson.build  metadata_stream.cpp  metadata_stream.h
src/utils/ucx/: meson.build  ucx_utils.cpp  ucx_utils.h
test/: meson.build  nixl_gds_perf_test.cpp  nixl_gds_test.cpp
test/gtest/: common.h  gtest_main.cpp  main.cpp  mem_buffer.h  meson.build  metadata_exchange.cpp  multi_threading.cpp  plugin_manager.cpp  test_transfer.cpp  ucx_tests.cpp
test/gtest/mocks/: gmock_engine.h  mock_basic_plugin.cpp  mock_dram_engine.cpp  mock_dram_engine.h  mock_dram_plugin.cpp
test/nixl/: agent_example.cpp  desc_example.cpp  meson.build  nixl_doca_cuda_test.cu  nixl_doca_device_test.cu  nixl_doca_stream_test.cu  nixl_test.cpp  test_plugin.cpp
test/unit/plugins/: meson.build
test/unit/plugins/cuda_gds/: meson.build  nixl_gds_test.cpp
test/unit/plugins/doca/: common.h  kernel.cu  meson.build  nixl_doca_test.cpp
test/unit/plugins/hf3fs/: meson.build  nixl_gds_test.cpp  nixl_hf3fs_test.cpp
test/unit/plugins/posix/: nixl_posix_test.cpp
test/unit/plugins/ucx/: meson.build  ucx_backend_multi.cpp  ucx_backend_test.cpp
test/unit/plugins/ucx_mo/: meson.build  ucx_mo_backend_test.cpp
test/unit/utils/common/: map_perf.cpp  p2p_socket_test.cpp
test/unit/utils/cuda/: cuda_ptr_test.cpp  meson.build
test/unit/utils/file/: file_utils_test.cpp  meson.build
test/unit/utils/serdes/: serdes_test.cpp
test/unit/utils/stream/: metadata_streamer.cpp
test/unit/utils/ucx/: meson.build  ucx_am_test.cpp  ucx_worker_test.cpp
