[workspace]
members = [
    "src/bindings/rust/"
]
resolver = "3"

[workspace.package]
name = "nixl-sys"
version = "0.2.0"
edition = "2021"
description = "NVIDIA Inference Xfer Library"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/nixl"
repository = "https://github.com/ai-dynamo/nixl.git"
keywords = ["llm", "genai", "inference", "nvidia", "distributed", "nixl", "networking", "xfer",
            "communication"]
