[workspace]
members = [
    "src/bindings/rust/"
]
resolver = "3"

[workspace.package]
name = "nixl-sys"
version = "0.2.1"
edition = "2021"
description = "Low-level bindings to nixl - NVIDIA Inference Xfer Library"
authors = ["NIXL Developers <nixl-developers@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/nixl"
repository = "https://github.com/ai-dynamo/nixl.git"
keywords = ["llm", "genai", "inference", "nvidia", "distributed", "nixl", "networking", "xfer",
            "communication"]
readme = "README.md"
